fix: adjust font sizes on mobile and text selection colour

--- a/src/styles/components/FeaturedProject.module.scss
+++ b/src/styles/components/FeaturedProject.module.scss
@@ -14,10 +14,6 @@ $stacking-breakpoint: lg;
     min-height: 110vh;
   }
 
-  ::selection {
-    background-color: rgba(var(--accent-color-rgb), 0.2);
-  }
-
   &.purple {
     --accent-color: #c6beff;
     --accent-color-rgb: 198, 190, 255;
@@ -81,6 +77,7 @@ $stacking-breakpoint: lg;
       border-radius: $border-radius;
       position: relative;
       height: auto;
+      user-select: none;
     }
 
     @include min-breakpoint($stacking-breakpoint) {
@@ -140,11 +137,7 @@ $stacking-breakpoint: lg;
   }
 
   h3 {
-    margin-bottom: 0.2em;
-  }
-
-  h4 {
-    margin-bottom: 0.1em;
+    margin-bottom: 0.25em;
   }
 }
 
