--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -73,7 +73,7 @@ body {
   }
 
   ::selection {
-    background-color: rgba(var(--primary-rgb), 0.2);
+    background-color: rgba(#bababa, 0.2);
   }
 }
 
