--- a/src/styles/sections/Hero.module.scss
+++ b/src/styles/sections/Hero.module.scss
@@ -24,8 +24,12 @@
 
 .tagline {
   max-width: 19em;
-  font-size: 1.35em;
+  font-size: 1.2em;
   line-height: 1.3;
+
+  @include min-breakpoint(sm) {
+    font-size: 1.35em;
+  }
 
   img {
     display: inline-flex;
