--- a/src/styles/utils/typography.module.scss
+++ b/src/styles/utils/typography.module.scss
@@ -1,32 +1,49 @@
 @import '../utils/variables';
+@import '../utils/mixins';
 
 @mixin heading {
   color: var(--heading-font-color);
-  line-height: 1.25;
-  margin-bottom: 0.25em;
+  line-height: 1.15;
+  margin-bottom: 0.35em;
 }
 
 .headingXl {
   @include heading;
-  font-size: 3.25em;
+  font-size: 3em;
   font-weight: 700;
+
+  @include min-breakpoint(sm) {
+    font-size: 3.25em;
+  }
 }
 
 .headingLg {
   @include heading;
-  font-size: 2.75em;
+  font-size: 2.5em;
   font-weight: 700;
+
+  @include min-breakpoint(sm) {
+    font-size: 2.75em;
+  }
 }
 
 .headingMd {
   @include heading;
-  font-size: 2.5em;
+  font-size: 2.25em;
   font-weight: 700;
+
+  @include min-breakpoint(sm) {
+    font-size: 2.5em;
+  }
 }
 
 .headingSm {
   @include heading;
-  font-size: 2em;
+  font-size: 1.75em;
+
+  @include min-breakpoint(sm) {
+    font-size: 2em;
+  }
 }
 
 .subHeading {
